# ariac_competition

./: README.md
competition_control_system/: CMakeLists.txt  package.xml
competition_control_system/competition_control_system/: competition_interface.py  storage_class.py  utils.py
competition_control_system/src/: read_sensor.py  start_competition.py
competition_tutorials/: CMakeLists.txt  package.xml
competition_tutorials/competition_tutorials/: competition_interface.py  retrieve_order.py  storage_class.py
competition_tutorials/install/: local_setup.sh  setup.sh
competition_tutorials/install/competition_tutorials/share/competition_tutorials/: package.bash  package.zsh
competition_tutorials/src/: read_sensor.py  start_competition.py
